<resources>
    <string name="app_name">Global Tactics</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_us_placeholder">About Us Fragment</string>
    <string name="blog_placeholder">Blog Fragment</string>
    <string name="events_placeholder">Events Fragment</string>
    <string name="privacy_placeholder">Privacy Fragment</string>
    <string name="home_screen_placeholder">Home Screen Fragment</string>
    <string name="motto_text">Turning Perspective into Opportunity</string>
    <string name="about_us">ABOUT US</string>
    <string name="paragraph_one">Perspective is the ultimate advantage. It opens our minds. It reveals what others don\'t see. Global Tactics turns perspective into opportunity.</string>
    <string name="paragraph_two">Global Tactics is an international advisory firm that helps corporations, governments, and nonprofit organizations to understand how the world is changing and how that creates opportunities to be seized and risks to be managed.</string>
    <string name="paragraph_three">We work with our clients to navigate the increasingly complex global environment, to analyze political and economic developments, and understand country-specific regulations and business practices.</string>
    <string name="paragraph_four">We evaluate market readiness, barriers of entry, and strategic alignment between business operations and product development.</string>
    <string name="contact_page_title">CONTACT US</string>
    <string name="home_fragment_title">Home</string>
    <string name="about_us_fragment_title">About Us</string>
    <string name="events_fragment_title">Events</string>
    <string name="blog_fragment_title">Blog</string>
    <string name="privacy_policy_fragment_title">Privacy Policy</string>
    <string name="calendar">calendar</string>
    <string name="our_experts_fragment_title">Our Experts</string>
    <string name="expert_test_name">Lenny Brown</string>
    <string name="expert_test_title">Best Manager</string>
    <string name="expert_test_location">Seattle, Washington</string>
    <string name="expert_test_specialties">Testing, Managing, Being the best</string>
    <string name="expert_test_description">The best manager there ever was.</string>
    <string name="expert_test_linkedin">https://www.linkedin.com/in/lennycbrown/</string>
    <string name="our_successes_fragment_title">Our Successes</string>
    <string name="corporate">corporate</string>
    <string name="government">government</string>
    <string name="nonprofit">nonprofit</string>
    <string name="nonprofit_title">NON-PROFIT</string>
    <string name="title">title</string>
    <string name="description">description</string>
    <string name="date">date</string>
    <string name="url">url</string>
    <string name="intDate">intDate</string>
    <string name="srcId">srcId</string>
    <string name="corporates">corporates</string>
    <string name="governments">governments</string>
    <string name="imageUrl">imageUrl</string>
    <string name="contact_fragment_title">Contact</string>
    <string name="contact_placeholder">Contact Fragment</string>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_first_name">First Name</string>
    <string name="contact_form_last_name">Last Name</string>
    <string name="contact_form_email">Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department...</string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <string name="how_can_we_help">Thank you for your interest in Global Tactics. Please send us a message to learn how we can help your organization.</string>
    <string name="privacy_policy">PRIVACY POLICY</string>
    <string name="privacy_updated">Last Updated: August 22, 2020</string>
    <string name="privacy_header_one">Introduction</string>
    <string name="privacy_paragraph_one">Global Tactics, LLC ("Global Tactics") knows your privacy is important so we will treat the information you share with us with care.</string>
    <string name="privacy_paragraph_two">This Privacy Policy explains how we collect, use, and share personal information when you visit our website located at globaltactics.co, engage with our marketing operations, or when you contact us, including through email or social media. For simplicity, in this Privacy Policy we call all of these activities "interacting with Global Tactics."</string>
    <string name="privacy_paragraph_three">We operate in the United States and this Privacy Policy is intended for users located in the United States. If you are located outside of the U.S., please be aware that the information we collect will be processed in the U.S. and will be subject to U.S. law.</string>
    <string name="privacy_paragraph_four">By using this website, you agree that the laws of the state of Washington, without regard to principles of conflict of laws, will govern this Privacy Policy and any dispute that might arise from the use of our website. You expressly agree that exclusive jurisdiction for any dispute related to the use of our website, resides in the courts of King County, Washington and you further agree and expressly consent to the exercise of personal jurisdiction in the courts of King County, Washington. Use of our website is unauthorized in any jurisdiction that does not give effect to the terms and conditions set forth therein.</string>
    <string name="privacy_header_two">Information We Collect</string>
    <string name="privacy_paragraph_five">As you interact with Global Tactics, we may collect the following information:</string>
    <string name="privacy_paragraph_six">Information you provide to us:</string>
    <string name="privacy_bullet_one"> - Contact information, such as your name, address, email address and phone number;</string>
    <string name="privacy_bullet_two"> - Any information disclosed when entering contests, sweepstakes, or submitting surveys we, or a third-party on our behalf, may run;</string>
    <string name="privacy_bullet_three"> - Any information disclosed when engaging with us on social media; and</string>
    <string name="privacy_bullet_four"> - Communications and other feedback, including questions, vulnerability reports, and other messages you address to us directly such as email or online forms.</string>
    <string name="privacy_paragraph_seven">Information we collect automatically: We automatically collect certain information about your activity when you interact with us online. This includes:</string>
    <string name="privacy_bullet_five"> - Internet Protocol ("IP") addresses of the devices you\'re using to interact with us online;</string>
    <string name="privacy_bullet_six"> - Tools such as cookies and other local storage used by websites and web browsers to maintain information regarding your previous activities on a site;</string>
    <string name="privacy_bullet_seven"> - Information regarding your internet connection including your Internet Service Provider, connection type, and approximate city level location of your internet connection based on IP address;</string>
    <string name="privacy_bullet_eight"> - Information about how the device is interacting with our website and social media accounts;</string>
    <string name="privacy_bullet_nine"> - Type and version of your device’s operating system and web browser;</string>
    <string name="privacy_bullet_ten"> - Specific interactions with our website (such as which pages you viewed, in what order, and how long you engaged with each page); and</string>
    <string name="privacy_bullet_eleven"> - Error logs.</string>
    <string name="privacy_paragraph_eight">Please see our "Cookies and Tracking Technologies" section below for further information, including your choices in relation to the use of these technologies.</string>
    <string name="privacy_paragraph_nine">We may combine information that we receive from the various sources described above for the purposes identified in the next section.</string>
    <string name="privacy_header_three">How We Use the Information We Collect</string>
    <string name="privacy_paragraph_ten">We use the information we collect to:</string>
    <string name="privacy_bullet_twelve"> - Provide, maintain, analyze, and improve our website;</string>
    <string name="privacy_bullet_thirteen"> - Develop new products and services;</string>
    <string name="privacy_bullet_fourteen"> - Communicate with you for a range of reasons (including providing information we think will be of interest to you, conducting surveys, and responding to your comments, questions, and requests);</string>
    <string name="privacy_bullet_fifteen"> - Protect the rights and property of Global Tactics, our users, and others;</string>
    <string name="privacy_bullet_sixteen"> - Detect, prevent, and respond to fraud, abuse, and security issues; and</string>
    <string name="privacy_bullet_seventeen"> - Carry out any other purpose described to you at the time the information was collected.</string>
    <string name="privacy_paragraph_eleven">We may aggregate or de-identify information such that it is no longer linked to you or your device. This notice does not limit our ability to use or disclose aggregated or de-identified information that is not linked to you.</string>
    <string name="privacy_header_four">How We Share Information</string>
    <string name="privacy_paragraph_twelve">Global Tactics may share the information it collects about you in the following circumstances:</string>
    <string name="privacy_bullet_eighteen"> - With vendors and service providers who support our business, such as by providing analytics, research, marketing, online advertising, security, data storage and infrastructure services;</string>
    <string name="privacy_bullet_nineteen"> - When we believe in good faith that disclosure is required by law, and when we determine we should respond to subpoenas, warrants, government requests or similar valid process served on us;</string>
    <string name="privacy_bullet_twenty"> - When we believe in good faith that disclosure is necessary to protect or defend our rights, protect your safety or the safety of others, or investigate fraud;</string>
    <string name="privacy_bullet_twentyone"> - In connection with the sale, transfer or financing of a significant part of a Global Tactics\' business or its assets, including any such activities associated with a bankruptcy proceeding; or</string>
    <string name="privacy_bullet_twentytwo"> - With your consent, including if you intentionally interact with third-parties on our site.</string>
    <string name="privacy_header_five">Security</string>
    <string name="privacy_paragraph_thirteen">Global Tactics takes reasonable administrative, technical, and physical security measures to protect your personal information and to ensure that it is used in accordance with this Privacy Policy.</string>
    <string name="privacy_paragraph_fourteen">Wherever we collect sensitive information (such as credit card data), that information is encrypted and transmitted to us in a secure way. You can verify this by looking for a closed lock icon at the bottom of your web browser, or looking for "https" at the beginning of the address of the web page.</string>
    <string name="privacy_paragraph_fifteen">If a password is used to help protect your accounts and personal information, it is your responsibility to keep your password confidential. Do not share this information with anyone. If you are sharing a computer with anyone you should always log out before leaving a site or service to protect access to your information from subsequent users.</string>
</resources>