<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_marginTop="@dimen/seventy_dp"
    tools:context=".AboutUsFragment">

    <TextView
        android:id="@+id/tvAboutUs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/thirty_dp"
        android:layout_marginRight="@dimen/thirty_dp"
        android:gravity="center"
        android:text="@string/about_us"
        android:textColor="#FAF7F7"
        android:textSize="@dimen/thirty_sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/tvParagraphOne"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/thirty_dp"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:layout_marginRight="@dimen/thirty_dp"
        android:text="@string/paragraph_one"
        android:textColor="#FAF7F7"
        android:textSize="@dimen/eighteen_sp" />

    <TextView
        android:id="@+id/tvParagraphTwo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/thirty_dp"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:layout_marginRight="@dimen/thirty_dp"
        android:text="@string/paragraph_two"
        android:textColor="#FAF7F7"
        android:textSize="@dimen/eighteen_sp" />

    <TextView
        android:id="@+id/tvParagraphThree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/thirty_dp"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:layout_marginRight="@dimen/thirty_dp"
        android:text="@string/paragraph_three"
        android:textColor="#FAF7F7"
        android:textSize="@dimen/eighteen_sp" />

    <TextView
        android:id="@+id/tvParagraphFour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/thirty_dp"
        android:layout_marginTop="@dimen/fifteen_dp"
        android:layout_marginRight="@dimen/thirty_dp"
        android:text="@string/paragraph_four"
        android:textColor="#FAF7F7"
        android:textSize="@dimen/eighteen_sp" />

    <TextView
        android:id="@+id/tvBorderLine"
        android:layout_width="match_parent"
        android:layout_height="@dimen/five_dp"
        android:layout_marginLeft="@dimen/ninety_dp"
        android:layout_marginTop="@dimen/forty_dp"
        android:layout_marginRight="@dimen/ninety_dp"
        android:background="#ffffff" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ivLinkedin"
            android:layout_width="@dimen/fifty_dp"
            android:layout_height="@dimen/fifty_dp"
            android:layout_margin="@dimen/ten_dp"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/linkedin" />

        <ImageView
            android:id="@+id/ivFacebook"
            android:layout_width="@dimen/fifty_dp"
            android:layout_height="@dimen/fifty_dp"
            android:layout_margin="@dimen/ten_dp"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/ivTwitter"
            android:layout_width="@dimen/fifty_dp"
            android:layout_height="@dimen/fifty_dp"
            android:layout_margin="@dimen/ten_dp"
            android:layout_weight="1"
            android:clickable="true"
            android:src="@drawable/twitter" />
    </LinearLayout>
</LinearLayout>
</ScrollView>
